Name:		model-type
Version:	0.0.1.0
Synopsis:	FeynRules-generated model file URL type 
Description: 	FeynRules-generated model file URL type
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     


Executable model-type
  Main-is: model-type.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   cmdargs, model-type

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath, containers,
                   safecopy>0.5, acid-state>0.4,
                   cmdargs
                     --  cereal>=0.3.1.0,
  Exposed-Modules: 
                   HEP.Automation.Model.Type
                   HEP.Automation.Model.Type.Type
                   HEP.Automation.Model.Type.Job
                   HEP.Automation.Model.Type.Command
  Other-Modules: 

 
		 